# my-fastapi-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  conftest.py  database.py  db.json  docker-compose.yml  main.py  models.py  pyproject.toml  security.py  server_logs.txt  test_day_15.py  test_day_16.py  test_day_19_background.py  test_db_isolation.py  test_exception_handler.py  test_main.py  test_security_real.py  test_verify_validation.py  update_01-05.md  verify_auth.py  verify_logging_task.py
.github/workflows/: test.yml
app/: __init__.py  database.py  dependencies.py  main.py  security.py
app/models/: __init__.py  item.py  user.py
app/repositories/: __init__.py  base.py  item.py  user.py
app/routers/: __init__.py  items.py  misc.py  users.py
app/schemas/: __init__.py  item.py  user.py
docs/: WALKTHROUGH_28_29.md  articles.md  walkthrough-13-14.md  walkthrough-15.md  walkthrough-16.md  walkthrough-18.md  walkthrough-19.md  walkthrough-20.md  walkthrough-21.md  walkthrough-22.md  walkthrough-23.md  walkthrough-24.md  walkthrough-25.md  walkthrough-26.md  walkthrough-27.md  walkthrough_day17.md
static/: style.css
templates/: index.html
tests/: conftest.py  test_db_isolation.py  test_main.py
